Update test case for deleting pod with podman_play
Signed-off-by: nishipy <goodisonev4@gmail.com>

--- a/tests/integration/targets/podman_play/tasks/main.yml
+++ b/tests/integration/targets/podman_play/tasks/main.yml
@@ -110,31 +110,26 @@
     - name: Remove pods created by kube play
       containers.podman.podman_play:
         executable: "{{ test_executable | default('podman') }}"
-        kube_file: "{{ item }}"
+        kube_file: /tmp/play3.yaml
         state: absent
       register: remove_pod
-      loop:
-        - /tmp/play1.yaml
-        - /tmp/play3.yaml
 
+    - name: Check if the pod was removed as expected
+      assert:
+        that:
+          - remove_pod is changed
+          
     - name: Get deleted pod info
       containers.podman.podman_pod_info:
         executable: "{{ test_executable | default('podman') }}"
-        name: "{{ item }}"
-      loop:
-        - web-deploy
-        - web-deploy-pod
-        - web-deploy-pod-0
-        - web-deploy-pod-1
-        - web-deploy-pod-2
+        name: web-deploy-pod
       register: nonexist
 
     - name: Check if the result is as expected
       assert:
         that:
-          - item.pods == []
-      with_items: "{{ nonexist.results }}"
-
+          - nonexist.pods == []
+  
   always:
 
     - name: Delete all pods leftovers from tests
